Solved Overflow Problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,7 @@ nav a {
 
 main {
     font-size: 20px;
+    overflow: hidden;
 }
 
 .landing {
@@ -89,6 +90,7 @@ main {
 
 .content p {
         font-size: 20px;
+        overflow: hidden;
     }
 
 
@@ -100,6 +102,7 @@ main {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--nav-body);
     color: var(--text1);
+    overflow: hidden;
 }
 
 .about img {
@@ -113,6 +116,7 @@ main {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--nav-body);
     color: var(--text1);
+    overflow: hidden;
 }
 
 .contact img {
@@ -126,6 +130,7 @@ main {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--nav-body);
     color: var(--text1);
+    overflow: hidden;
 }
 
 .skills img {
@@ -140,6 +145,7 @@ main {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--nav-body);
     color: var(--text1);
+    overflow: hidden;
 }
 
 .projects img {
@@ -154,6 +160,7 @@ main {
 h2 {
     margin-bottom: 20px;
     font-size: 36px;
+    overflow: hidden;
 }
 
 
@@ -162,6 +169,7 @@ h2 {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    overflow: hidden;
 }
 
 .footer h2 {
